Improve inventory listing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -97,6 +97,7 @@
 	"cert": {
 		"expired": "__name__ expired __moment__"
 	},
+	"cfbundlename": "CFBundleName",
 	"client": {
 		"activity": "Client Activity",
 		"comment": "Comments",
