--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -346,7 +346,10 @@
 			"last_failure": "Last failed backup",
 			"last_failure_msg": "Message",
 			"last_success": "Last successful backup",
-			"title": "Time Machine Report"
+			"title": "Time Machine Report",
+			"kind": "Kind",
+			"location_name": "Name",
+			"backup_location": "Location"
 		},
 		"username": "Username",
         "wifi": {
