--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -66,7 +66,7 @@
 		"last_success": "Last successful backup",
         "kind": "Kind",
         "location_name": "Name",
-        "backup_location": "Location"
+        "backup_location": "Location",
         "destinations": "Destinations"
 	},
 	"battery": {
@@ -353,7 +353,7 @@
 			"title": "Time Machine Report",
 			"kind": "Kind",
 			"location_name": "Name",
-			"backup_location": "Location"
+			"backup_location": "Location",
 			"destinations": "Destinations"
 		},
 		"username": "Username",
