--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -453,6 +453,7 @@
 		  "admin": "Admin"
 		},
 		"reports": {
+			"appVersions": "App Versions Report",
 			"backup": "Backup Report",
 			"clients": "Client report",
 			"configuration": "Configuration report",
