--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -241,6 +241,9 @@
 	"events": {
 		"widget_title": "Events generated in the last hour"
 	},
+	"external": {
+		"mwa_link": "Open in Munki Web Admin"
+	},
 	"failing": "Failing!",
 	"filevault": {
 		"users": "FileVault Enabled users",
