--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -43,6 +43,10 @@
   "auth": {
     "addtoconfig": "Ajoutez cette ligne dans config.php:",
     "back_to_site": "Retour au site",
+"captcha": {
+			"empty": "Merci de remplir le captcha",
+			"invalid": "Réponse invalide"
+		},
     "empty_not_allowed": "Les valeurs non définies ne sont pas permises",
     "error_contacting_AD": "Une erreur est survenue en contactant l'AD",
     "gen_other": "Créer une autre",
