--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -74,11 +74,7 @@
 			"text": "Текст __number__"
 		},
 		"bluetooth": {
-			"keyboard_battery": "Клавиатура",
-			"mouse_battery": "Мышь",
-			"status": "Статус",
-			"title": "Отчет по Bluetooth",
-			"trackpad_battery": "Трекпад"
+			"title": "Отчет по Bluetooth"
 		},
 		"computername": "Имя",
 		"hardware": {
