--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -321,11 +321,9 @@
 			"title": "Apple Remote Desktop Report"
 		},
 		"bluetooth": {
-			"keyboard_battery": "Keyboard",
-			"mouse_battery": "Mouse",
-			"status": "Status",
-			"title": "Bluetooth report",
-			"trackpad_battery": "Trackpad"
+            "battery_percent": "Battery Percent",
+            "device_type": "Device Type",
+			"title": "Bluetooth report"
 		},
 		"certificate": {
 			"commonname": "Common Name",
