Update to Bluetooth localise
This is a minor patch for commit 74a78502bd1f1b83f765544c86bd3fe6a787ba09

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -74,9 +74,15 @@
 	},
 	"bluetooth": {
 		"all_ok": "No bluetooth devices with low battery",
+		"apple wireless keyboard": "Apple Wireless Keyboard",
+		"apple wireless trackpad": "Apple Wireless Trackpad",
+		"apple magic mouse": "Apple Magic Mouse",
 		"bluetooth": "Bluetooth",
 		"bluetooth_battery_widget": "Bluetooth battery status",
 		"keyboard": "Keyboard Status",
+		"magic keyboard": "Magic Keyboard",
+		"magic trackpad 2": "Magic Trackpad 2",
+		"magic mouse 2": "Magic Mouse 2",
 		"mouse": "Mouse Status",
 		"panel_title": "Bluetooth devices with less than 15% battery life",
 		"status": "Bluetooth Status",
