--- a/assets/locales/dataTables/fr.json
+++ b/assets/locales/dataTables/fr.json
@@ -17,6 +17,6 @@
     },
     "oAria": {
         "sSortAscending":  ": activer pour faire un tri de la colonne ascendant",
-        "sSortDescending": ": activer pour faire un tri de la colonne decendant"
+        "sSortDescending": ": activer pour faire un tri de la colonne descendant"
     }
 }
