--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -129,6 +129,7 @@
 			"power": "Power",
 			"printers": "Printers",
 			"profiles": "Profiles",
+			"sccm_status": "SCCM Status",
 			"serverstats": "Server Statistics",
 			"summary": "Summary",
 			"third_party_software": "Third Party Software",
@@ -456,6 +457,7 @@
 			"power": "Power",
 			"printers": "Printers",
 			"profile": "Profiles",
+			"sccm_status": "SCCM Status",
 			"security": "Security",
 			"timemachine": "Time Machine",
 			"warranty": "Warranty",
