Fix SCCM en locale

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -469,6 +469,7 @@
 			"power": "Power",
 			"printers": "Printers",
 			"profile": "Profiles",
+			"sccm_status": "SCCM Status",
 			"security": "Security",
 			"timemachine": "Time Machine",
 			"warranty": "Warranty",
@@ -567,6 +568,17 @@
 		"printer_status": "Printer Status",
 		"tab_title": "Installed Printers",
 		"url": "URL"
+	},
+	"sccm_status": {
+	  "title": "SCCM Agent Status",
+	  "titleheader": "SCCM Agent Information",
+	  "agent_status": "SCCM Agent Status",
+	  "mgmt_point": "Management Point",
+	  "enrollment_name": "Enrollment User Name",
+	  "enrollment_server": "Enrollment Server",
+	  "last_checkin": "Last SCCM Check In",
+	  "cert_exp": "SCCM Client Certificate Expiration",
+	  "enrollment_status": "Enrollment Status"
 	},
 	"security": {
 		"security": "Security",
