--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -171,6 +171,11 @@
       "title": "CrashPlan"
     }
   },
+	"backup2go": {
+		"widget": {
+			"title": "Etat Backup2go"
+		}
+	},
   "danger": "Erreur",
 	"database": "Base de données",
   "date": {
@@ -255,6 +260,7 @@
 "external": {
 		"mwa_link": "Ouvrir dans Munki Web Admin"
 	},
+  "failed": "Echoué",
   "failing": "Défaillant !",
   "filevault": {
     "users": "Utilisateurs avec FileVault actif",
@@ -269,7 +275,7 @@
 		"listing": {
 			"email": "Email",
 			"status": "Etat",
-			"title": "Rapport FindMyMac",
+			"title": "Rapport Find My Mac",
 			"ownerdisplayname": "Nom du propriétaire",
 			"personid": "ID ICloud",
 			"hostname": "Nom d'hôte iCloud"
@@ -327,6 +333,13 @@
       "text": "Texte __number__",
       "title": "Rapport Apple Remote Desktop"
     },
+		"backup2go": {
+			"title": "Backup2go",
+			"date": "Dernière sauvegarde réussie",
+			"widget": {
+				"title": "Règles de notifications"
+			}
+		},
     "bluetooth": {
 "battery_percent": "Pourcentage batterie",
 	"bluetooth_power": "Puissance Bluetooth",
@@ -440,13 +453,14 @@
     "listings": {
       "ard": "Apple Remote Desktop",
       "bluetooth": "Bluetooth",
+      "backup2go": "Archiware Backup2Go",
       "clients": "Clients",
       "certificate": "Certificats",
-	"deploystudio": "DeployStudio",
+      "deploystudio": "DeployStudio",
       "directoryservice": "Service d'annuaire",
       "disk": "Disque",
       "displays": "Moniteurs",
-      "findmymac": "FindMyMac",
+      "findmymac": "Find My Mac",
       "gsx": "GSX",
       "hardware": "Matériel",
       "inventory": "Inventaire",
@@ -456,6 +470,7 @@
       "power": "Alimentation",
       "printers": "Imprimantes",
       "profile": "Profils",
+      "sccm_status": "Etat SCCM",
       "security": "Sécurité",
       "timemachine": "Time Machine",
       "warranty": "Garantie",
@@ -477,7 +492,8 @@
       "location": "Localisation",
       "munki": "Munki",
       "network": "Réseau",
-      "power": "Alimentation"
+      "power": "Alimentation",
+      "backup2go" : "Backup2go"
     },
     "user": {
       "logout": "Se déconnecter"
@@ -534,7 +550,6 @@
 		"pdo": "Extension PDO",
 		"pdodrivers": "Base de données pilotes PDO",
 		"php": "PHP",
-		"soap": "Extension SOAP (requis pour le module GSX)",
 		"version": "Version"
 		},
   "pkg_failed_to_install": "L'installation de __pkg__ a échouée : __reason__",
@@ -555,6 +570,17 @@
     "tab_title": "Imprimantes installées",
     "url": "URL"
   },
+	"sccm_status": {
+	  "title": "Etat agent SCCM",
+	  "titleheader": "Information agent SCCM",
+	  "agent_status": "Etat agent SCCM",
+	  "mgmt_point": "Point de gestion",
+	  "enrollment_name": "Nom d'inscription de l'utilisateur",
+	  "enrollment_server": "Inscription serveur",
+	  "last_checkin": "Dernier test SCCM",
+	  "cert_exp": "Expiration du certificat client SCCM",
+	  "enrollment_status": "Etat de l'inscription"
+	},
   "security": {
     "security": "Sécurité",
     "gatekeeper": "Etat Gatekeeper",
@@ -703,7 +729,10 @@
       "lastweek": "Dernière sauvegarde effectuée il y a plus d'une journée",
       "title": "État Time Machine",
       "today": "Sauvegardé aujourd'hui",
-      "week_plus": "Dernière sauvegarde effectuée il y a plus d'une semaine"
+      "week_plus": "Dernière sauvegarde effectuée il y a plus d'une semaine",
+      "b2g_ok": "Dernière sauvegarde de 2 semaines",
+	  "b2g_warning": "Dernière sauvegarde de 4 semaines",
+	  "b2g_danger": "Dernière sauvegarde de plus de 4 semaines"
     },
     "warrantysupport": {
       "warrantyinfo": "Comptes pris en charge, Vintage, Obsolètes et Etat du support inconnu",
@@ -730,3 +759,4 @@
  },
 	"yes": "Oui"
 }
+
