--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -552,6 +552,7 @@
 		"pdo": "PDO Extension",
 		"pdodrivers": "PDO Database drivers",
 		"php": "PHP",
+		"soap": "SOAP Extension",
 		"version": "Version"
 	},
 	"pkg_failed_to_install": "__pkg__ failed to install: __reason__",
