--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -538,7 +538,9 @@
   "security": {
     "security": "Security",
     "gatekeeper": "Gatekeeper Status",
-    "sip": "SIP Status"
+    "sip": "SIP Status",
+    "ssh_users": "SSH Users",
+    "ard_users": "ARD Users"
   },
   "serial": "Seriennummer",
   "servermetrics": {
