--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -540,7 +540,8 @@
     "gatekeeper": "Gatekeeper Status",
     "sip": "SIP Status",
     "ssh_users": "SSH Users",
-    "ard_users": "ARD Users"
+    "ard_users": "ARD Users",
+    "firmwarepw": "Firmware Password"
   },
   "serial": "Seriennummer",
   "servermetrics": {
