--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -563,6 +563,7 @@
     "smb_users": "SMB Benutzer"
   },
   "show": "Anzeigen",
+  "sip_status": "SIP Status",
   "size": "Größe",
   "software": {
     "software": "Software",
