--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -612,6 +612,7 @@
 		"smb_users": "SMB Users"
 	},
 	"show": "Show",
+	"sip_status": "SIP Status",
 	"size": "Size",
 	"software": {
 		"software": "Software",
