--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -609,6 +609,7 @@
     "smb_users": "Utilisateurs SMB"
   },
   "show": "Afficher",
+  "sip_status": "SIP Status",
   "size": "Taille",
   "software": {
     "software": "Logiciel",
