--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -587,6 +587,8 @@
 	"security": {
 		"security": "Security",
 		"gatekeeper": "Gatekeeper Status",
+		"gatekeeper_active": "Gatekeeper Active",
+		"gatekeeper_disabled": "Gatekeeper Disabled",
 		"sip": "SIP Status",
 		"ssh_users": "SSH Users",
 		"ard_users": "ARD Users",
