Add firmware listing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -467,6 +467,7 @@
 			"disk": "Disk",
 			"displays": "Displays",
 			"findmymac": "Find My Mac",
+			"firmware": "Firmware Escrow",
 			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
